Deleted duplicated data

--- a/website/templates/wall_designs.html
+++ b/website/templates/wall_designs.html
@@ -18,7 +18,7 @@
 </ul>
     <form method="POST">
         <br/>
-        <input name="design-name" id="design-name"" class="form-control" placeholder="New design's name"></input>
+        <input name="design-name" id="design-name"" class="form-control" placeholder="New design name"></input>
         <br />
         <div align="center">
             <button type="submit" class="btn btn-primary">Add Design</button>
