--- a/website/templates/retaining_wall.html
+++ b/website/templates/retaining_wall.html
@@ -12,7 +12,7 @@
             <br/>
         </h3>
         <p>The units can be in the metric system (kN and m) or in the imperial system (lb and ft)</p>
-        <h4>Materials properties</h4>
+        <h4>Material's properties</h4>
         <div class="form-group">
             <label for="gs">Material (concrete) unit weight (kN/m³)</label>
             <input
